[package]
name = "echoserve"
version = "2.2.3"
edition = "2021"
description = "A mock API server that serves configurable responses from YAML"
license = "MIT"
repository = "https://github.com/ztroop/echoserve"
homepage = "https://github.com/ztroop/echoserve"
documentation = "https://github.com/ztroop/echoserve"
readme = "README.md"
keywords = ["mock", "api", "server", "yaml", "testing"]
categories = ["web-programming::http-server", "development-tools::testing"]

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
clap = { version = "4", features = ["derive", "cargo"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"